added offline mode

--- a/src/app/header/header/header.component.html
+++ b/src/app/header/header/header.component.html
@@ -1,6 +1,16 @@
+<!-- Navbar -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-black">
   <div class="container-fluid">
-    <a class="navbar-brand text-goldenrod" routerLink="/">Some App</a>
+    <a
+      class="navbar-brand text-goldenrod"
+      routerLink="/"
+      [attr.contenteditable]="isEditing ? 'true' : 'false'"
+      (dblclick)="enableEditing()"
+      (blur)="saveAppName($event)"
+      #appNameElement>
+      {{ appName }}
+    </a>
+
     <button
       class="navbar-toggler"
       type="button"
@@ -8,25 +18,37 @@
       data-bs-target="#navbarNav"
       aria-controls="navbarNav"
       aria-expanded="false"
-      aria-label="Toggle navigation"
-    >
+      aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
+
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ms-auto">
-        <li
-          class="nav-item"
-          [class.active]="currentRoute === '/tasks'"
-        >
-          <a class="nav-link" routerLink="/tasks">Task Cards</a>
+        <li class="nav-item" [class.active]="currentRoute === '/tasks'">
+          <a class="nav-link" routerLink="/tasks" (click)="closeNavbar()">Task Cards</a>
         </li>
-        <li
-          class="nav-item"
-          [class.active]="currentRoute === '/todos'"
-        >
-          <a class="nav-link" routerLink="/todos">Task</a>
+        <li class="nav-item" [class.active]="currentRoute === '/todos'">
+          <a class="nav-link" routerLink="/todos" (click)="closeNavbar()">Task</a>
         </li>
       </ul>
     </div>
   </div>
 </nav>
+
+<!-- User Name Modal -->
+<div class="modal fade" id="userNameModal" tabindex="-1" aria-labelledby="userNameModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="userNameModalLabel">Enter Your Name</h5>
+      </div>
+      <div class="modal-body">
+        <input type="text" class="form-control" [(ngModel)]="tempUserName" placeholder="Enter your name" />
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-primary" (click)="saveUserName()">Save</button>
+      </div>
+    </div>
+  </div>
+</div>
+
