--- a/src/app/todo/todo.component.css
+++ b/src/app/todo/todo.component.css
@@ -1,17 +1,15 @@
 
 .input-container {
-  display: flex;
-  align-items: center;
-  position: fixed;
-  bottom: 0;
-  left: 50%;
-  transform: translateX(-50%);
+
+  margin: auto;
   width: 100%;
   max-width: 600px;
   background: white;
   padding: 15px;
+  margin-bottom: 0px;
   box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.1);
   border-radius: 10px;
+  z-index: 9999999999999999;
 }
 
 
