--- a/src/app/todo/todo.component.html
+++ b/src/app/todo/todo.component.html
@@ -1,4 +1,4 @@
-<div class="todo-container container mt-5 p-3 border rounded">
+<div class="todo-container container mt-5 p-3 border rounded  ">
   <h1 class="mb-4">To-Do List</h1>
   <div class="mt-3 d-flex justify-content-between">
     <p class="text-muted">Remaining tasks: <strong class="text-warning">{{ remainingTasks }}</strong></p>
@@ -69,13 +69,14 @@
     </li>
   </ul>
 
-  <div class="input-container mt-4 d-flex">
-    <input
-      type="text"
-      [(ngModel)]="newTask"
-      class="form-control me-2"
-      placeholder="Add a task..."
-    />
-    <button (click)="addTask()" class="btn btn-success">Add</button>
-  </div>
+
+</div>
+<div class="input-container  d-flex mb-4">
+  <input
+    type="text"
+    [(ngModel)]="newTask"
+    class="form-control me-2"
+    placeholder="Add a task..."
+  />
+  <button (click)="addTask()" class="btn btn-success">Add</button>
 </div>
