--- a/src/app/footer/footer/footer.component.html
+++ b/src/app/footer/footer/footer.component.html
@@ -1,8 +1,3 @@
 <footer>
-  <div class="row">
-    <div class="col-12 text-center footer-content">
-      Designed And developed by Abubakkar Shahzad
-    </div>
-  </div>
+  <p > Designed and developed by Abubakkar Shahzad</p>
 </footer>
-
