--- a/src/app/drag-drop/drag-drop.component.html
+++ b/src/app/drag-drop/drag-drop.component.html
@@ -156,7 +156,7 @@
                     (click)="deleteTask(i, j)"
                     title="Delete Task"
                   >
-                    <i class="fa fa-trash"></i>
+                    <i class="fa fa-trash text-danger"></i>
                   </button>
 
                   <!-- Dropdown for Moving Task -->
