--- a/src/app/todo/todo.component.html
+++ b/src/app/todo/todo.component.html
@@ -100,7 +100,7 @@
       placeholder="Add a new task..."
     />
     <button (click)="addTask()" class="btn btn-primary">
-      <i class="fas fa-plus"></i> Add Task
+     Add Task
     </button>
   </div>
 </div>
