added guess game

--- a/src/app/header/header/header.component.html
+++ b/src/app/header/header/header.component.html
@@ -33,6 +33,9 @@
         <li class="nav-item" [class.active]="currentRoute === '/weather'">
           <a class="nav-link" routerLink="/weather" (click)="closeNavbar()">Weather</a>
         </li>
+        <li class="nav-item" [class.active]="currentRoute === '/guess-word'">
+          <a class="nav-link" routerLink="/guess-word" (click)="closeNavbar()">Guess Game</a>
+        </li>
       </ul>
     </div>
   </div>
