--- a/src/app/drag-drop/drag-drop.component.html
+++ b/src/app/drag-drop/drag-drop.component.html
@@ -127,7 +127,7 @@
                     />
                   </div>
                   <ng-template #viewTaskMode>
-                    <span>{{ task }}</span>
+                    <span class="task-text">{{ task }}</span>
                   </ng-template>
                 </div>
 
