front avant connexion api

--- a/src/app/header/header/header.component.html
+++ b/src/app/header/header/header.component.html
@@ -36,6 +36,9 @@
         <li class="nav-item" [class.active]="currentRoute === '/guess-word'">
           <a class="nav-link" routerLink="/guess-word" (click)="closeNavbar()">Guess Game</a>
         </li>
+        <li class="nav-item" [class.active]="currentRoute === '/member'">
+          <a class="nav-link" routerLink="/member" (click)="closeNavbar()">Member</a>
+        </li>
       </ul>
     </div>
   </div>
