--- a/src/app/member/member.component.html
+++ b/src/app/member/member.component.html
@@ -16,6 +16,9 @@
         </div>
 
         <div class="modal-body">
+          <div *ngIf="errorMessage" class="alert alert-danger">
+            {{ errorMessage }}
+          </div>
           <form>
             <div class="mb-3">
               <label class="form-label fw-bold">Last Name</label>
