connection back tasks

--- a/front/src/app/todo/todo.component.html
+++ b/front/src/app/todo/todo.component.html
@@ -24,7 +24,7 @@
         <input
           *ngIf="task.editing"
           type="text"
-          [(ngModel)]="task.text"
+          [(ngModel)]="task.name"
           class="form-control form-control-sm me-2"
         />
 
@@ -35,7 +35,7 @@
           class="task-text flex-grow-1"
         >
           <i class="fas fa-check-circle task-icon me-2" *ngIf="task.completed"></i>
-          {{ task.text }}
+          {{ task.name }}
         </span>
 
         <!-- Task Actions -->
