--- a/front/src/app/member/member.component.html
+++ b/front/src/app/member/member.component.html
@@ -1,7 +1,7 @@
 <div class="container mt-5 position-relative p-4">
   <div class="d-flex justify-content-between align-items-center mb-4">
     <h1 class="mb-0">Member</h1>
-    <button class="btn btn-primary" (click)="openModal()">Add Member</button>
+    <button class="btn btn-primary" (click)="openModal()" data-cy="add-member-btn">Add Member</button>
   </div>
 
   <div class="modal fade" id="memberModal" tabindex="-1" aria-labelledby="memberModalLabel" aria-hidden="true">
@@ -18,55 +18,55 @@
           <div *ngIf="errorMessage" class="alert alert-danger">
             {{ errorMessage }}
           </div>
-          <form>
+          <form data-cy="member-form" (ngSubmit)="submit()">
             <div class="mb-3">
               <label class="form-label fw-bold">Last Name</label>
-              <input type="text" class="form-control" [(ngModel)]="currentMember.lastname" name="lastName">
+              <input type="text" class="form-control" [(ngModel)]="currentMember.lastname" name="lastname" autocomplete="off">
             </div>
             <div class="mb-3">
               <label class="form-label fw-bold">First Name</label>
-              <input type="text" class="form-control" [(ngModel)]="currentMember.firstname" name="firstName">
+              <input type="text" class="form-control" [(ngModel)]="currentMember.firstname" name="firstname" autocomplete="off">
             </div>
             <div class="mb-3">
               <label class="form-label fw-bold">Email</label>
-              <input type="email" class="form-control" [(ngModel)]="currentMember.email" name="email">
+              <input type="email" class="form-control" [(ngModel)]="currentMember.email" name="email" autocomplete="off">
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+              <button type="submit" class="btn btn-primary">
+                {{ isEditMode ? 'Save' : 'Add' }}
+              </button>
             </div>
           </form>
         </div>
 
-        <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-          <button type="button" class="btn btn-primary" (click)="submit()">
-            {{ isEditMode ? 'Save' : 'Add' }}
-          </button>
-        </div>
       </div>
     </div>
   </div>
 
 
-  <div class="task-list card p-3 shadow">
+  <div class="task-list card p-3 shadow" data-cy="member-list">
     <ul class="list-group">
       <li class="list-group-item task-item d-flex align-items-center justify-content-between mt-2"
         *ngFor="let member of members">
         <div class="d-flex align-items-center" style="gap: 5rem;">
           <div class="d-flex gap-1">
             <p class="mb-0 fw-bold text-white">Last Name :</p>
-            <p class="mb-0 text-white">{{ member.lastname }}</p>
+            <p class="mb-0 text-white" name="lastname">{{ member.lastname }}</p>
           </div>
           <div class="d-flex gap-1">
             <p class="mb-0 fw-bold text-white">First Name :</p>
-            <p class="mb-0 text-white">{{ member.firstname }}</p>
+            <p class="mb-0 text-white" name="firstname">{{ member.firstname }}</p>
           </div>
           <div class="d-flex gap-1">
             <p class="mb-0 fw-bold text-white">Email :</p>
-            <p class="mb-0 text-white">{{ member.email }}</p>
+            <p class="mb-0 text-white" name="email">{{ member.email }}</p>
           </div>
         </div>
 
         <div class="d-flex gap-2">
-          <button class="btn btn-warning" (click)="openModal(member)">Update</button>
-          <button class="btn btn-danger" (click)="deleteMember(member.id)">Delete</button>
+          <button class="btn btn-warning" (click)="openModal(member)" data-cy="edit-member-btn">Update</button>
+          <button class="btn btn-danger" (click)="deleteMember(member.id)" data-cy="delete-member-btn">Delete</button>
         </div>
 
       </li>
